add macro budget and improve cache
单文件累计 100k 循环预算，第 100001 次返回一次 MACRO-003 并停止后续展开。
循环变量改为 long，修复 Integer.MAX_VALUE 溢出。
展开后的表达式坐标映射回原始 %{...} 源码，避免诊断和 quick fix 偏移。
移除 project 生命周期强引用 Map，缓存改由 XmlFile 持有，并按 PSI modification stamp 失效。
未闭合 %{ 现在返回 MACRO-001。
scope Map、diagnostic List、node List 均 defensive copy 并返回不可变视图。